# ispmanagement

./: .env.example  .gitignore  .prettierignore  .prettierrc.cjs  FEATURES.md  README.md  check_final.txt  check_output.txt  check_results.txt  clippy.txt  docker-compose.postgis.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  svelte.config.js  task.md  vite.config.js
src/: app.html  (+2 more)
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20240117140000_create_file_records.sql  20240117150000_add_storage_usage_to_tenants.sql  20260122071000_add_proof_attachment_to_invoices.sql  20260204000100_baseline.down.sql  20260204000100_baseline.up.sql  20260205090000_add_support_tickets.down.sql  20260205090000_add_support_tickets.up.sql  20260205100000_add_support_ticket_attachments.down.sql  20260205100000_add_support_ticket_attachments.up.sql  20260206120000_add_announcements.down.sql  20260206120000_add_announcements.up.sql  20260206123000_add_announcement_rich_content.down.sql  20260206123000_add_announcement_rich_content.up.sql  20260207090000_add_email_outbox.down.sql  20260207090000_add_email_outbox.up.sql  20260207110000_email_outbox_text_ids.down.sql  20260207110000_email_outbox_text_ids.up.sql  20260207160000_add_announcement_email_force.down.sql  20260207160000_add_announcement_email_force.up.sql  20260207161000_add_email_outbox_html.down.sql  20260207161000_add_email_outbox_html.up.sql  20260209130000_add_user_addresses.down.sql  20260209130000_add_user_addresses.up.sql  20260209180000_add_mikrotik_routers.down.sql  20260209180000_add_mikrotik_routers.up.sql  20260210120000_add_mikrotik_interface_metrics.down.sql  20260210120000_add_mikrotik_interface_metrics.up.sql  20260210193000_add_mikrotik_alerts.down.sql  20260210193000_add_mikrotik_alerts.up.sql  20260210200000_add_mikrotik_maintenance.down.sql  20260210200000_add_mikrotik_maintenance.up.sql  20260211120000_add_customers.down.sql  20260211120000_add_customers.up.sql  20260211140000_add_pppoe_accounts.down.sql  20260211140000_add_pppoe_accounts.up.sql  20260211190000_add_mikrotik_profiles_pools.down.sql  20260211190000_add_mikrotik_profiles_pools.up.sql  20260212120000_add_mikrotik_logs.down.sql  20260212120000_add_mikrotik_logs.up.sql  (+47 more)
(+395 files in other folders)
