[package]
name = "saas-tauri"
version = "0.1.0"
description = "A SaaS Boilerplate with Rust + Tauri"
authors = ["Developer"]
edition = "2021"

[lints.rust]
dependency_on_unit_never_type_fallback = "allow"

[lib]
name = "saas_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["postgres"]
postgres = []  # PostgreSQL mode (default)
sqlite = []    # SQLite mode: cargo build --features sqlite --no-default-features

[dependencies]
# Tauri
tauri = { version = "2", features = ["image-png", "image-ico", "devtools"] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Database (SQLite default, PostgreSQL optional)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "uuid", "chrono"] }

# Authentication
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["rand"] }
rand = "0.8"
base64 = "0.21"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Async traits
async-trait = "0.1"

# Once cell for lazy initialization
once_cell = "1"

# HTTP Client for Email API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# SMTP Email
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"] }

# HTTP Server
axum = { version = "0.8", features = ["multipart", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "timeout", "trace"] }

# WebSocket / Futures
futures = "0.3"

# Environment
dotenvy = "0.15"
tauri-plugin-single-instance = "2.0.1"
sysinfo = "0.30"
tauri-plugin-fs = "2.4.5"
tokio-util = { version = "0.7.18", features = ["io", "compat"] }
tauri-plugin-dialog = "2.6.0"

[profile.dev]
incremental = false
split-debuginfo = "off"
debug = false
strip = "symbols"
